--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^0.21.0",
         "element-ui": "^2.14.1",
+        "font-awesome": "^4.7.0",
         "js-cookie": "^2.2.0",
         "qs": "^6.9.4",
         "vue": "^2.5.2",
