--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.0",
     "less": "^3.13.0",
     "less-loader": "^4.1.0",
+    "nprogress": "^0.2.0",
     "qs": "^6.9.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
