--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.14.1",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "less": "^3.13.0",
     "less-loader": "^4.1.0",
     "nprogress": "^0.2.0",
