--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "vue-frame",
+    "name": "vue-migration",
     "version": "1.0.0",
-    "description": "A Vue.js project",
-    "author": "zhai",
+    "description": "web端迁移工具 Vue.js project",
+    "author": "zzg",
     "private": true,
     "scripts": {
         "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
